# elderly-companion

./: .gitignore  =13  CMakeLists.txt  ENHANCED_GUARD_INTEGRATION.md  INDUSTRIAL_DEPLOYMENT_GUIDE.md  LICENSE  README.md  SIMPLE_SETUP.md  cmake_build_fix.md  design-routeragent.md  docker-compose.yml  enhanced_guard_demo.py  enhanced_guard_standalone_demo.py  fix-env-repo.sh  implementation-plan.md  industrial_guard_llm_demo.py  package.xml  requirements.txt  router_agent_chat_loop.py  router_agent_chat_test.py  simple_chat_loop.py  test_simple_chat.py  usecase-mapping.md
action/: EmergencyResponse.action  FollowPerson.action  GoToLocation.action
config/: mediamtx.yml  mosquitto.conf
deployment/rk3588/: deploy.sh  elderly-companion-action-agent.service  elderly-companion-privacy-storage.service  elderly-companion-router-agent.service
docker/production/: Dockerfile  entrypoint.sh
docker/ros2-dev/: Dockerfile
docs/: API_SPECIFICATION.md  DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS.md  use-cases.txt
launch/: enhanced_elderly_companion.launch.py
msg/: EmergencyAlert.msg  EmotionData.msg  HealthStatus.msg  IntentResult.msg  SafetyConstraints.msg  SpeechResult.msg
scripts/: build.sh  build_production_image.sh  build_workspace.sh  cleanup_obsolete_files.sh  fix_cmake.sh  launch.sh  publish_pcm.py  run_integration_tests.sh  run_safety_tests.sh  setup_dev_env.sh  setup_docker_dirs.sh  setup_enhanced_router_agent.sh
src/action_agent/: CMakeLists.txt  package.xml
src/action_agent/action_agent/: __init__.py
src/action_agent/nodes/: action_coordinator_node.py  unitree_go2_bridge_node.py
src/family_app/: App.tsx  package.json
src/family_app/src/screens/: DashboardScreen.tsx
src/family_app/src/services/: EmergencyService.ts  NotificationService.ts  RobotConnectionService.ts
src/router_agent/: CMakeLists.txt  __init__.py  package.xml  setup.py
src/router_agent/config/: config_loader.py  enhanced_system_config.yaml  geofence.json  production_config.yaml  rk3588_config.yaml
src/router_agent/guard/: rules_engine.py
src/router_agent/launch/: audio_pipeline.launch.py  enhanced_elderly_companion.launch.py  enhanced_guard.launch.py  router_agent_complete.launch.py
src/router_agent/llm_intent/: structured_llm_engine.py
src/router_agent/nodes/: audio_processor_node.py  dialog_manager_node.py  emotion_analyzer_node.py  enhanced_guard_engine.py  enhanced_router_coordinator.py  enhanced_tts_engine_node.py  fastapi_bridge_node.py  guard_fastapi_bridge_node.py  guard_integration_node.py  mqtt_adapter_node.py  router_agent_coordinator.py  safety_guard_node.py  silero_vad_node.py  sip_voip_adapter_node.py  smart_home_backend_node.py  speech_recognition_node.py  tts_engine_node.py  webrtc_uplink_node.py
src/router_agent/resource/: router_agent
src/router_agent/router_agent/config/: devices.json  geofence.json  guard.yml
src/router_agent/router_agent/docker/: docker-compose.pc.gpu.yml  docker-compose.pc.yml  docker-compose.rk3588.yml
src/router_agent/router_agent/prompts/: system_intent_zh.txt
src/router_agent/router_agent/schemas/: intent.schema.json
src/router_agent/router_agent/services/: adapters_stub.py  guard_service.py  intent_service.py  orchestrator.py
src/router_agent/router_agent/tests/: curl_follow.sh
src/router_agent/schemas/: intent.gbnf  intent.schema.json
src/router_agent/services/: adapters_stub.py  guard_service.py  intent_service.py  orchestrator.py
src/router_agent/tests/: curl_emergency.sh  curl_guard.sh  curl_open_light.sh  test_enhanced_integration.py
src/shared/: privacy_storage.py  webrtc_streamer.py
srv/: EmergencyDispatch.srv  ExecuteAction.srv  ProcessSpeech.srv  ValidateIntent.srv
tests/: diagnose_sherpa.py  init_asr_model.py  test_framework.py
tools/: download_models.sh  readme.md  run_streaming.sh
