<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elderly_companion</name>
  <version>0.1.0</version>
  <description>Elderly Companion Robdog - A comprehensive elderly care robotics system</description>
  
  <maintainer email="dev@elderly-companion.com">Elderly Companion Team</maintainer>
  <license>MIT</license>
  
  <url type="website">https://github.com/elderly-companion/robdog</url>
  <url type="bugtracker">https://github.com/elderly-companion/robdog/issues</url>
  <url type="repository">https://github.com/elderly-companion/robdog</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Core ROS2 Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  
  <!-- Navigation Dependencies -->
  <depend>nav2_common</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Audio/Media Dependencies -->
  <depend>audio_msgs</depend>
  
  <!-- Communication Dependencies -->
  <depend>rosbridge_library</depend>
  
  <!-- Development Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>